--- a/src/App.scss
+++ b/src/App.scss
@@ -86,13 +86,22 @@ body{
         margin-bottom: 25px;
 
         &__info, &__wind{
+            height: 200px;
             text-align: center;
+
+            img{
+                width: 50px;
+                height: 50px;
+            }
+
             h3{
+                white-space: nowrap;
                 font-weight: lighter;
                 margin: 0px 0px 30px 0px;
             }
-
+            
             span{
+                white-space: nowrap;
                 font-size: small;
                 background-color: $gray-color;
                 padding: 10px;
@@ -101,13 +110,26 @@ body{
             }
         }
 
-        &__wind svg{
-            font-size: 20px;
-            margin: 0px 0px 20px 0px;
-            color: white;
-            background-color: $light-black-color;
-            padding: 10px;
-            border-radius: 50%;
+        &__info{
+            max-width: 250px;
+            overflow: auto;
+
+            .icons{
+                display: flex;
+                justify-content: center;
+                margin-bottom: 20px;
+            }
+        }
+
+        &__wind{
+            svg{
+                font-size: 18px;
+                margin: 15px;
+                color: white;
+                background-color: $light-black-color;
+                padding: 10px;
+                border-radius: 50%;
+            }
         }
     }
 
